--- a/myDocumentation/sections/crossref-en.html
+++ b/myDocumentation/sections/crossref-en.html
@@ -5,31 +5,23 @@ This section provides details for each class and property defined by Digital con
    <ul class="hlist">
       <li>
          <a href="#Context"
-            title="https://w3id.org/digitalconstruction/Contexts#Context">
-            <span>context</span>
-         </a>
+            title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
       </li>
       <li>
          <a href="#ContextFramework"
-            title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">
-            <span>context framework</span>
-         </a>
+            title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">ContextFramework</a>
       </li>
       <li>
          <a href="#UnitAssignment"
-            title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">
-            <span>unit assignment</span>
-         </a>
+            title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">UnitAssignment</a>
       </li>
       <li>
          <a href="#UnitFramework"
-            title="https://w3id.org/digitalconstruction/Contexts#UnitFramework">
-            <span>unit framework</span>
-         </a>
+            title="https://w3id.org/digitalconstruction/Contexts#UnitFramework">UnitFramework</a>
       </li>
    </ul>
    <div class="entity" id="Context">
-      <h3>context<sup class="type-c" title="class">c</sup>
+      <h3>Context<sup class="type-c" title="class">c</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#classes">Class ToC</a>
          </span>
       </h3>
@@ -72,7 +64,7 @@ This section provides details for each class and property defined by Digital con
       </dl>
    </div>
    <div class="entity" id="ContextFramework">
-      <h3>context framework<sup class="type-c" title="class">c</sup>
+      <h3>ContextFramework<sup class="type-c" title="class">c</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#classes">Class ToC</a>
          </span>
       </h3>
@@ -97,7 +89,7 @@ This section provides details for each class and property defined by Digital con
       </dl>
    </div>
    <div class="entity" id="UnitAssignment">
-      <h3>unit assignment<sup class="type-c" title="class">c</sup>
+      <h3>UnitAssignment<sup class="type-c" title="class">c</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#classes">Class ToC</a>
          </span>
       </h3>
@@ -126,7 +118,7 @@ This section provides details for each class and property defined by Digital con
       </dl>
    </div>
    <div class="entity" id="UnitFramework">
-      <h3>unit framework<sup class="type-c" title="class">c</sup>
+      <h3>UnitFramework<sup class="type-c" title="class">c</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#classes">Class ToC</a>
          </span>
       </h3>
@@ -220,13 +212,13 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>is inverse of</dt>
@@ -250,13 +242,13 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#ContextFramework"
-                  title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">context framework</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">ContextFramework</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>is inverse of</dt>
@@ -283,13 +275,13 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>is inverse of</dt>
@@ -313,7 +305,7 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#UnitAssignment"
-                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">unit assignment</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">UnitAssignment</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
          </dl>
@@ -331,7 +323,7 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#UnitAssignment"
-                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">unit assignment</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">UnitAssignment</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
          </dl>
@@ -349,7 +341,7 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#UnitAssignment"
-                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">unit assignment</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">UnitAssignment</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
          </dl>
@@ -367,13 +359,13 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#UnitFramework"
-                  title="https://w3id.org/digitalconstruction/Contexts#UnitFramework">unit framework</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#UnitFramework">UnitFramework</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
             <dd>
                <a href="#UnitAssignment"
-                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">unit assignment</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">UnitAssignment</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
          </dl>
@@ -391,13 +383,13 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
             <dd>
                <a href="#ContextFramework"
-                  title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">context framework</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">ContextFramework</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>is inverse of</dt>
@@ -421,13 +413,13 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>is inverse of</dt>
@@ -451,13 +443,13 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>is inverse of</dt>
@@ -494,7 +486,7 @@ This section provides details for each class and property defined by Digital con
             <dt>has domain</dt>
             <dd>
                <a href="#Context"
-                  title="https://w3id.org/digitalconstruction/Contexts#Context">context</a>
+                  title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
             <dt>has range</dt>
