--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -5,27 +5,19 @@ This ontology has the following classes and properties.</span>
 <ul class="hlist">
    <li>
       <a href="#Context"
-         title="https://w3id.org/digitalconstruction/Contexts#Context">
-         <span>context</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#Context">Context</a>
    </li>
    <li>
       <a href="#ContextFramework"
-         title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">
-         <span>context framework</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">ContextFramework</a>
    </li>
    <li>
       <a href="#UnitAssignment"
-         title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">
-         <span>unit assignment</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#UnitAssignment">UnitAssignment</a>
    </li>
    <li>
       <a href="#UnitFramework"
-         title="https://w3id.org/digitalconstruction/Contexts#UnitFramework">
-         <span>unit framework</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#UnitFramework">UnitFramework</a>
    </li>
 </ul><h4>Object Properties</h4><ul class="hlist">
    <li>
