--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -1,4 +1,4 @@
-<h2 id="overv" class="list">Digital construction - Contexts: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="overv" class="list">Digital Construction Contexts: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
@@ -10,6 +10,10 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#ContextFramework"
          title="https://w3id.org/digitalconstruction/Contexts#ContextFramework">ContextFramework</a>
+   </li>
+   <li>
+      <a href="#ContextSet"
+         title="https://w3id.org/digitalconstruction/Contexts#ContextSet">ContextSet</a>
    </li>
    <li>
       <a href="#UnitAssignment"
@@ -24,6 +28,12 @@ This ontology has the following classes and properties.</span>
       <a href="#dependsOn"
          title="https://w3id.org/digitalconstruction/Contexts#dependsOn">
          <span>depends on</span>
+      </a>
+   </li>
+   <li>
+      <a href="#hasActiveContext"
+         title="https://w3id.org/digitalconstruction/Contexts#hasActiveContext">
+         <span>has active context</span>
       </a>
    </li>
    <li>
@@ -60,6 +70,12 @@ This ontology has the following classes and properties.</span>
       <a href="#hasUnitAssignment"
          title="https://w3id.org/digitalconstruction/Contexts#hasUnitAssignment">
          <span>has unit assignment</span>
+      </a>
+   </li>
+   <li>
+      <a href="#isActiveInSet"
+         title="https://w3id.org/digitalconstruction/Contexts#isActiveInSet">
+         <span>is active in set</span>
       </a>
    </li>
    <li>
