--- a/myDocumentation/sections/introduction-en.html
+++ b/myDocumentation/sections/introduction-en.html
@@ -50,6 +50,13 @@ organized and engineering-oriented: </p>
   </li>
 </ul>
 
+<p>The figure below shows how the named graphs can contain information (triples) about same objects. That is, objects do
+not belong to any specific named graphs but the information about them does. </p>
+
+<center>
+<img src="sections/dico-contexts.png" alt="Objects and contexts" height="60%">
+</center>
+
 <p>
 The ontology is therefore based on the following principles:
 </p>
@@ -69,7 +76,7 @@ The ontology is therefore based on the following principles:
 </ol>
 
 <center>
-<img src="sections/context-named-graph-example.png" alt="Example of context and named graphs" height="400">
+<img src="sections/context-named-graph-example.png" alt="Example of context and named graphs" height="80%">
 </center>
 
 <p>
