--- a/myDocumentation/sections/overview-en.html
+++ b/myDocumentation/sections/overview-en.html
@@ -26,75 +26,59 @@ This ontology has the following classes and properties.</span>
 </ul><h4>Object Properties</h4><ul class="hlist">
    <li>
       <a href="#dependsOn"
-         title="https://w3id.org/digitalconstruction/Contexts#dependsOn">
-         <span>depends on</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#dependsOn">dependsOn</a>
    </li>
    <li>
       <a href="#hasActiveContext"
-         title="https://w3id.org/digitalconstruction/Contexts#hasActiveContext">
-         <span>has active context</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#hasActiveContext">hasActiveContext</a>
    </li>
    <li>
       <a href="#hasContext"
-         title="https://w3id.org/digitalconstruction/Contexts#hasContext">
-         <span>has context</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#hasContext">hasContext</a>
    </li>
    <li>
       <a href="#hasDependent"
-         title="https://w3id.org/digitalconstruction/Contexts#hasDependent">
-         <span>has dependent</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#hasDependent">hasDependent</a>
    </li>
    <li>
       <a href="#hasPropertyWithUnit"
-         title="https://w3id.org/digitalconstruction/Contexts#hasPropertyWithUnit">
-         <span>has property with unit</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#hasPropertyWithUnit">hasPropertyWithUnit</a>
    </li>
    <li>
       <a href="#hasQuantityKind"
-         title="https://w3id.org/digitalconstruction/Contexts#hasQuantityKind">
-         <span>has quantity kind</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#hasQuantityKind">hasQuantityKind</a>
+   </li>
+   <li>
+      <a href="#hasSubContext"
+         title="https://w3id.org/digitalconstruction/Contexts#hasSubContext">hasSubContext</a>
    </li>
    <li>
       <a href="#hasUnit"
-         title="https://w3id.org/digitalconstruction/Contexts#hasUnit">
-         <span>has unit</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#hasUnit">hasUnit</a>
    </li>
    <li>
       <a href="#hasUnitAssignment"
-         title="https://w3id.org/digitalconstruction/Contexts#hasUnitAssignment">
-         <span>has unit assignment</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#hasUnitAssignment">hasUnitAssignment</a>
    </li>
    <li>
       <a href="#isActiveInSet"
-         title="https://w3id.org/digitalconstruction/Contexts#isActiveInSet">
-         <span>is active in set</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#isActiveInSet">isActiveInSet</a>
    </li>
    <li>
       <a href="#isContextOf"
-         title="https://w3id.org/digitalconstruction/Contexts#isContextOf">
-         <span>is context of</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#isContextOf">isContextOf</a>
+   </li>
+   <li>
+      <a href="#isSubContextOf"
+         title="https://w3id.org/digitalconstruction/Contexts#isSubContextOf">isSubContextOf</a>
    </li>
    <li>
       <a href="#nextContext"
-         title="https://w3id.org/digitalconstruction/Contexts#nextContext">
-         <span>next context</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#nextContext">nextContext</a>
    </li>
    <li>
       <a href="#previousContext"
-         title="https://w3id.org/digitalconstruction/Contexts#previousContext">
-         <span>previous context</span>
-      </a>
+         title="https://w3id.org/digitalconstruction/Contexts#previousContext">previousContext</a>
    </li>
 </ul><h4>Data Properties</h4><ul class="hlist">
    <li>
